fix: add globalcors to gateway and explicit CORS origins in SecurityConfig